Fix issue where side padding was remaining in two-col columns on mobile viewports.

--- a/src/components/TwoCol/TwoCol.scss
+++ b/src/components/TwoCol/TwoCol.scss
@@ -9,10 +9,14 @@
     &.col2 {
         padding-left: 10px;
     }
+    &.col1, &.col2 {
+      @media only screen and (max-width: $breakpoint-sm) {
+        padding: 0;
+      }
+    }
     @media only screen and (max-width: $breakpoint-sm) {
         display: block;
         margin-bottom: 20px;
-        padding: 0;
         width: 100%;
     }
   }
